--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Home</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
 </head>
-<body>
-    <p>Hello</p>
+
+<body class="background">
+  <header>
+    <h1 class="text">Madison Brown</h1>
+  </header>
+  <div class="flex-container">
+    <div>
+      <p class="text2">All About Me</p>
+      <p class="style2">I am a senoir who loves ducks and horses, and I will be gradutating this school year. I grew up
+        in
+        the countryside with a
+        family that has had animals all their life.</p>
+      <p>
+        <br>
+        <audio controls>
+          <source src="Crowsinautumn.wav" type="audio/wav">
+        </audio>
+      <p class="style2">An audio file I made called "Crows in Autumn" in Reaper using sounds from BBC Sound Effects. This audio file is supposed to be background ambience.
+      </p>
+      <br>
+      <audio controls>
+        <source src="TheStorm.wav" type="audio/wav">
+      </audio>
+      <p class="style2">An audio file I made called "The Storm" in Reaper using sound from BBC Sound Effects. The scene
+        that should come to mind when you here this audio file play, is a Cowboy trying to catch his train.</p>
+      <p class="style3">Note: Both of these audio files were made for assignments in class.</p>
+    </div>
+  </div>
 </body>
+
 </html>
